디자인 수정

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<header class="header">
 		<div class="wrapper">
 			<img class="logo" src="./images/header-logo.png" alt="logo">
+			<img class="wave" src="./images/wave.png" alt="wave">
 			<nav class="navi">
 				<a class="selected" href="#">Home</a>
 				<a href="#">About</a>
@@ -19,14 +20,21 @@
 				<a href="#">Contact Us</a>
 			</nav>
 		</div>
-		<!-- <img class="wave" src="./images/wave.png" alt="wave"> -->
 	</header>
 	<section class="contents">
+		<aside class="sidebar">
+			<h5>Creative Fields</h5>
+			<ul>
+				<li>Graphic Design</li>
+				<li>Web Develop</li>
+				<li>Motion Graphic</li>
+			</ul>
+		</aside>
 		<ul class="list">
 			<li>
 				<img src="./images/section01.png" alt="jaws">
 				<div class="description">
-					<h1>Jaws</h1>
+					<h2>Jaws</h2>
 					<p>
 						Lorem Ipsum is simply dummy text of the printing and typesetting industry. text ever since the
 						1500s,
@@ -37,7 +45,7 @@
 			<li>
 				<img src="./images/section02.png" alt="giant wave">
 				<div class="description">
-					<h1>Giant Wave</h1>
+					<h2>Giant Wave</h2>
 					<p>
 						Lorem Ipsum is simply dummy text of thedummy text of thedummy text of the printing and
 						typesetting
@@ -48,7 +56,7 @@
 			<li>
 				<img src="./images/section03.png" alt="Mavericks">
 				<div class="description">
-					<h1>Mavericks</h1>
+					<h2>Mavericks</h2>
 					<p>
 						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
 						the
