--- a/index.html
+++ b/index.html
@@ -67,27 +67,31 @@
 			</li>
 		</ul>
 	</section>
-	<footer>
-		<img src="./images/footer-logo.png" alt="footer logo">
-		<div>
-			<h5>About us</h5>
-			<ul>
-				<li>Information</li>
-				<li>Team</li>
-				<li>About</li>
-			</ul>
-		</div>
-		<div>
-			<h5>Creative Fields</h5>
-			<ul>
-				<li>Graphic Design</li>
-				<li>Web Develop</li>
-				<li>Motion Graphic</li>
-			</ul>
-		</div>
-		<div>
-			<h5>Social Network</h5>
-			<img src="./images/icon-sprite.png" alt="social">
+	<footer class="footer">
+		<div class="wrapper">
+			<img class="logo" src="./images/footer-logo.png" alt="footer logo">
+			<div class="lists">
+				<div class="links">
+					<h5>About us</h5>
+					<ul>
+						<li>Information</li>
+						<li>Team</li>
+						<li>About</li>
+					</ul>
+				</div>
+				<div class="links">
+					<h5>Creative Fields</h5>
+					<ul>
+						<li>Graphic Design</li>
+						<li>Web Develop</li>
+						<li>Motion Graphic</li>
+					</ul>
+				</div>
+				<div class="links">
+					<h5>Social Network</h5>
+					<img src="./images/icon-sprite.png" alt="social">
+				</div>
+			</div>
 		</div>
 	</footer>
 </body>
