이미지 스프라이트 처리

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
 				</div>
 				<div class="links">
 					<h5>Social Network</h5>
-					<img src="./images/icon-sprite.png" alt="social">
+					<!-- <img src="./images/icon-sprite.png" alt="social"> -->
+					<div class="twitter"></div>
+					<div class="facebook"></div>
+					<div class="pinterest"></div>
 				</div>
 			</div>
 		</div>
